# nixia-core

./: .gitattributes  .gitignore  Cargo.toml  README.md  code_review.py
benches/: batcher.rs  lm_forward.rs  lm_forward_seq1.rs  sampling.rs  trainer.rs
data/: DATASET_GUIDE.md  dataset_sources.json  eval_prompts.txt  sample_corpus.txt
data/style_packs/: chatfix_manual_seed.txt  local_flavor_sample.txt
data/templates/: GOLDEN_DATASET_RUBRIC.md  NIXIA_CODER_RUBRIC.md  NIXIA_COMPANION_RUBRIC.md  manual_batch_template.txt  nixia_companion_001.txt  nixia_companion_002.txt  nixia_companion_003.txt  nixia_companion_004.txt  nixia_companion_005.txt  nixia_companion_006.txt  nixia_companion_007.txt  nixia_companion_008.txt  nixia_companion_009.txt  nixia_companion_010.txt  nixia_dataset_001.txt  nixia_dataset_071.txt
data/templates/old/: nixia_dataset_001.txt  nixia_dataset_002.txt  nixia_dataset_003.txt  nixia_dataset_004.txt  nixia_dataset_005.txt  nixia_dataset_006.txt  nixia_dataset_007.txt  nixia_dataset_008.txt  nixia_dataset_009.txt  nixia_dataset_010.txt  (+61 more)
examples/: rag_test.rs
notebooks/: nixia_train_gpu.ipynb
src/: error.rs  lib.rs  main.rs  rag.rs
src/data/: corpus.rs  dataset.rs  mod.rs
src/inference/: chat.rs  mod.rs  quantization.rs  runtime.rs  sampling.rs
src/model/: block.rs  feed_forward.rs  lm.rs  mod.rs  preset.rs  quantization.rs
src/tokenizer/: mod.rs  normalizer.rs  special.rs  trainer.rs  vocab.rs
src/training/: config.rs  eval.rs  mod.rs  runner.rs  steps.rs
tools/: audit_dataset.py  build_dataset.py  eval_prompts.py  sync_hf.py
