[package]
name = "nixia"
version = "0.1.0"
edition = "2024"

[dependencies]
burn = { version = "~0.21", default-features = false, features = ["std", "train", "flex", "ndarray"] }
serde = { version = "1.0.228", features = ["derive"] }
turbovec = "0.8.0"

[features]
default = []
wgpu-backend = ["burn/wgpu"]
cuda-backend = ["burn/cuda"]
rocm-backend = ["burn/rocm"]

[dev-dependencies]
criterion = "0.8.2"
rand = "0.10.1"
[[bench]]
name = "lm_forward"
harness = false
[[bench]]
name = "lm_forward_seq1"
harness = false
[[bench]]
name = "batcher"
harness = false
[[bench]]
name = "sampling"
harness = false
